blockchain/goquorum/goquorum-ingress/templates/ingress.yaml
---
# ingress-nginx IngressClass
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: network-nginx
  namespace: quorum
spec:
  controller: k8s.io/network-ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goquorum-ingress-routes
  namespace: quorum
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/tessera-[0-9]?/(.*) /$1 break;
      rewrite (?i)/tessera-[0-9]?$ / break;    
      rewrite (?i)/kibana/(.*) /$1 break;
      rewrite (?i)/kibana$ / break;
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/whitelist-source-range: w.x.y.z/32,a.b.c.d/32

spec:
  ingressClassName: network-nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rpc-nodes-rpc
            port:
              number: 8545
---
apiVersion: v1
kind: Service
metadata:
  name: rpc-nodes-rpc
spec:
  selector:
    nodeType: reader
  ports:
  - protocol: TCP
    port: 8545
    targetPort: 8545
  type: ClusterIP
---
